trying to fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body,
 html {
     height: 100%;
     scroll-behavior: smooth;
-    overflow-x: hidden;
+/*    overflow-x: hidden;*/
     overflow-y: scroll;
 
     /* To remove weird margin on mobile view */
@@ -115,7 +115,7 @@ html {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     background-color: var(--bg-dark);
-    /*    overflow: hidden;*/
+    overflow: hidden;
     padding-top: 88px;
 }
 
